# tap-amazon-associates

./: .gitignore  meltano.yml  pyproject.toml  tox.ini
.github/workflows/: ci_workflow.yml
tap_amazon_associates/: client.py  streams.py  tap.py
tap_amazon_associates/schemas/: earnings-report.json  earnings-subtag-report.json  orders-report.json  orders-subtag-report.json  reports.json  tracking-report.json  utm-source-report.json
tap_amazon_associates/tests/: __init__.py  test_core.py
