[tool.poetry]
name = "tap-amazon-associates"
version = "0.0.1"
description = "`tap-amazon-associates` is a Singer tap for amazon_associates, built with the Meltano SDK for Singer Taps."
authors = ["Hunter Kuffel"]
keywords = [
    "ELT",
    "amazon_associates",
]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "<=3.11,>=3.8"
requests = "^2.31.0"
singer-sdk = "^0.31.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
tox = "^3.24.4"
flake8 = "^3.9.2"
black = "^23.7.0"
pydocstyle = "^6.1.1"
mypy = "^0.910"
types-requests = "^2.26.1"
isort = "^5.10.1"

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "tap_amazon_associates"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-amazon-associates = 'tap_amazon_associates.tap:TapAmazonAssociates.cli'
